[WK2][GTK] MiniBrowser won't play video in <embed> tag https://bugs.webkit.org/show_bug.cgi?id=113107

Reviewed by Anders Carlsson.

The wrong clip region is used for windowed plugins, because it's
translated to window frame coords again.

* WebProcess/Plugins/Netscape/x11/NetscapePluginX11.cpp:
(WebKit::NetscapePlugin::platformGeometryDidChange): Do not move
the current clip region.

Canonical link: https://commits.webkit.org/133867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149384 268f45cc-cd09-0410-ab3c-d52691b4dbfc